--- a/pages/message/message.wxss
+++ b/pages/message/message.wxss
@@ -1,58 +1,8 @@
-/**index.wxss**/
-.container{
-  position: relative;
-}
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-}
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.cnodeStatus{
-  position: absolute;
-  top: 20rpx;
-  left: 20rpx;
-}
-/* nav */
-.user-nav{
-  flex-direction: row;
-  display: flex;
-
-}
-.user-nav view{
-  flex:1;
-  text-align: center;
-  height: 80rpx;
-  line-height: 80rpx;
-  padding: 10rpx 0;
+.login-text{
   font-size: 28rpx;
-  border-bottom: 1px solid #f8f8f8;
-  color: #777;
-
-}
-.user-nav .active{
-  font-size: 32rpx;
-  border-bottom: 1px solid #80bd01;
   color: #80bd01;
-
 }
-.user-content{
-  height: 100%;
-  background-color: #f8f8f8;
-}
-
-/*列表 list*/
+/*message列表 list*/
 .scroll-posts-list{
   overflow: hidden;
 }
@@ -116,29 +66,4 @@
 .posts-list-info .item-box .hot{
   color: red;
   border: 1rpx solid red;
-}
-.posts-list .bar-info .bar-info-item{
-  display: inline-block;
-  margin-right: 50rpx;
-  line-height: 66rpx;
-}
-.posts-list .bar-info .bar-info-item-icon{
-  display: inline-block;
-  vertical-align: middle;
-  width: 40rpx;
-  height: 40rpx;
-  margin-right: 10rpx;
-}
-.posts-list .bar-info .bar-info-item-number{
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.posts-list .bar-info .bar-info-item2{
-  display: inline-block;
-  float: right;
-  line-height: 66rpx;
-}
-.posts-list .bar-info .bar-info-item2 .bar-info-item-number{
-  color: #80bd01;
 }
